@@ -119,6 +119,7 @@ private:
   CLIPFORMAT m_cfdropped;
   bool m_bDropped;
 
+  CSecString m_eLabel; // label at start of edit, if we need to revert
   void SetNewStyle(long lStyleMask, BOOL bSetBits);
   bool MoveItem(HTREEITEM hitem, HTREEITEM hNewParent);
   bool CopyItem(HTREEITEM hitem, HTREEITEM hNewParent, const CSecString &prefix);
